# materialscodegraph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICK_START.md  README.md  RESTORE_INSTRUCTIONS.md  SECURITY.md  __init__.py  config.json  pyproject.toml  requirements.txt  run_tests.py  setup.py
.claude/: settings.local.json
app/: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
app/cli/: mcg.py
app/common/: ids.py  schema.py
app/compute_mcp/runners/: materials_project.py
app/examples/: kaldo_bte_example.py  scripted_flow.py
app/interfaces_mcp/: server.py  tools.py
app/memory_mcp/: server.py  store.py
app/tests/: test_ids.py  test_integration.py  test_memory.py  test_schema.py
cli/: mcg.py
common/: config.py  io.py  schema.py  units.py
compute_mcp/: generic_runner.py  server.py  simple_runner.py
compute_mcp/configs/: README.md  kaldo.yaml  materials_project.yaml  vasp.yaml
compute_mcp/runners/: kaldo_bte.py  lammps_kappa_gk.py  materials_project.py
configs/: README.md  config_lammps.mcg  kaldo.json  lammps.json  lammps.mcg  materialsproject.json  materialsproject.mcg
examples/: kaldo_bte_example.py  scripted_flow.py
interfaces_mcp/: repo_scanner.py  server.py  tools.py
memory_mcp/: server.py  store.py
tests/: test_ids.py  test_integration.py  test_memory.py  test_schema.py
